--- a/paper_data/enet_predictions/enet_who_comparison.ipynb
+++ b/paper_data/enet_predictions/enet_who_comparison.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "58ab0dd8",
    "metadata": {
     "tags": []
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2b5a547b",
    "metadata": {
     "tags": []
@@ -591,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "id": "1dc5d66e",
    "metadata": {
     "tags": []
@@ -735,9 +735,127 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "475b44f9-ac29-462c-b5b1-9f63c95920cf",
+   "metadata": {},
+   "source": [
+    "## Two Random Strains per Season"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "654f5c95",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "m=30\n",
+    "for FILE in FILES:\n",
+    "    YEARS = NORTH_YEARS_RANDOM\n",
+    "    if FILE[:5] == 'south':\n",
+    "        YEARS = SOUTH_YEARS_RANDOM\n",
+    "    \n",
+    "    df = pd.read_csv(OUT_DIR + FILE + '_random.csv')\n",
+    "    seasons = df['season'].values\n",
+    "        \n",
+    "    for n in np.arange(m):\n",
+    "        random_seqs = []\n",
+    "        for YEAR in YEARS:\n",
+    "            population_df = pd.read_csv('raw_data/merged/' + FILE + '/' + FILE + '_ha_' + YEAR + '.csv')\n",
+    "            random_seq = population_df.sample(2, random_state=n)['sequence'].values\n",
+    "            random_seqs.append(random_seq)\n",
+    "\n",
+    "        random_errors_ha = []\n",
+    "        who_errors_ha = []\n",
+    "\n",
+    "        for i in range(len(seasons)):\n",
+    "            season_str = str(seasons[i])\n",
+    "            if len(season_str) == 1:\n",
+    "                season_str = str('0' + season_str)\n",
+    "            # read dominant sequences\n",
+    "            DATA_DIR_HA = DOM_DIR + FILE + '_ha/' + FILE + '_ha_' + season_str + '.csv'\n",
+    "            if not os.path.isfile(DATA_DIR_HA):\n",
+    "                random_errors_ha.append(-1)\n",
+    "                who_errors_ha.append(-1)\n",
+    "                continue\n",
+    "            dom_df_ha = pd.read_csv(DATA_DIR_HA)\n",
+    "            top_dominant_seqs_ha = dom_df_ha['sequence'].values[:10]\n",
+    "\n",
+    "            # access who recommendations\n",
+    "            who_ha_seq = df[df['season'] == seasons[i]]['ha_seq_who'].values[0][:HA_TRUNC]\n",
+    "\n",
+    "            # random seq\n",
+    "            random_seq_ha = random_seqs[i][:HA_TRUNC]\n",
+    "\n",
+    "            # find average enet and who errors\n",
+    "            total_random_error_ha = 0\n",
+    "            total_who_error_ha = 0\n",
+    "            for domseq in top_dominant_seqs_ha:\n",
+    "                total_random_error_ha += min(distance(random_seq_ha[0], domseq[:HA_TRUNC]), distance(random_seq_ha[1], domseq[:HA_TRUNC]))\n",
+    "                total_who_error_ha += distance(who_ha_seq, domseq[:HA_TRUNC])\n",
+    "            random_errors_ha.append(total_random_error_ha/10)\n",
+    "            who_errors_ha.append(total_who_error_ha/10)\n",
+    "\n",
+    "        # add to dataframe\n",
+    "        df['ha_random_error_' + str(n)] = random_errors_ha\n",
+    "        df['ha_who_error'] = who_errors_ha\n",
+    "    \n",
+    "    total_random_error = np.zeros(len(df))\n",
+    "    for n in np.arange(m):\n",
+    "        total_random_error += df['ha_random_error_' + str(n)]\n",
+    "    df['avg_random_error'] = total_random_error/m\n",
+    "    df.to_csv(OUT_DIR + FILE + '_random.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "9f8e1186-1a88-4a52-af68-fb340b8cccea",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "north_h1n1\n",
+      "    Avg. Improvement 2.56\n",
+      "    Var. Improvement 11.42\n",
+      "    % Improvement: 61.69\n",
+      "north_h3n2\n",
+      "    Avg. Improvement 0.19\n",
+      "    Var. Improvement 3.2\n",
+      "    % Improvement: 3.0\n",
+      "south_h1n1\n",
+      "    Avg. Improvement 0.78\n",
+      "    Var. Improvement 3.2\n",
+      "    % Improvement: 7.67\n",
+      "south_h3n2\n",
+      "    Avg. Improvement 1.05\n",
+      "    Var. Improvement 3.59\n",
+      "    % Improvement: 22.42\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    df1 = pd.read_csv(OUT_DIR + FILES[i] + '_random.csv')[['season','avg_random_error']]\n",
+    "    df2 = pd.read_csv(OUT_DIR + FILES[i] + '.csv')[['season','ha_who_error','best_ha_enet_error']]\n",
+    "    df1 = df1.merge(df2, on='season')\n",
+    "    df1['diff'] = df1['avg_random_error'] - df1['best_ha_enet_error']\n",
+    "    print(FILES[i])\n",
+    "    print('    Avg. Improvement', round(sum(df1['diff'][:20])/20, 2))\n",
+    "    print('    Var. Improvement', round(np.std(df1['diff'][:20]), 2))\n",
+    "    print('    % Improvement:', round(100 * (sum(df1['avg_random_error'][:20])/sum(df1['best_ha_enet_error'][:20])-1), 2))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "654f5c95",
+   "id": "d7730343-4912-4ae3-831f-eaa3096c519c",
    "metadata": {},
    "outputs": [],
    "source": []
