--- a/paper_data/irat_enet/animal_predictions.ipynb
+++ b/paper_data/irat_enet/animal_predictions.ipynb
@@ -41,9 +41,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 3,
    "id": "993ff235",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "DATA_DIR = 'raw_data/gisaid_animal/'\n",
@@ -275,10 +277,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "id": "13822f1c",
    "metadata": {
-    "scrolled": false
+    "tags": []
    },
    "outputs": [
     {
@@ -594,7 +596,7 @@
        "[75 rows x 13 columns]"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,6 +604,29 @@
    "source": [
     "df_merged = pd.read_csv(OUT_DIR + 'combined_results.csv')\n",
     "df_merged.sort_values(by='emergence_risk', ascending=False).head(75)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "b37c984a-7cec-424a-9443-82b6315d45d0",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1756"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_merged[df_merged['emergence_risk'] > 6.0])"
    ]
   },
   {
@@ -692,7 +717,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
