--- a/paper_data/enet_predictions/enet_who_comparison.ipynb
+++ b/paper_data/enet_predictions/enet_who_comparison.ipynb
@@ -744,14 +744,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "id": "654f5c95",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "m=30\n",
+    "m=10\n",
     "for FILE in FILES:\n",
     "    YEARS = NORTH_YEARS_RANDOM\n",
     "    if FILE[:5] == 'south':\n",
@@ -793,7 +793,7 @@
     "            total_random_error_ha = 0\n",
     "            total_who_error_ha = 0\n",
     "            for domseq in top_dominant_seqs_ha:\n",
-    "                total_random_error_ha += min(distance(random_seq_ha[0], domseq[:HA_TRUNC]), distance(random_seq_ha[1], domseq[:HA_TRUNC]))\n",
+    "                total_random_error_ha += min(distance(random_seq_ha[0][:HA_TRUNC], domseq[:HA_TRUNC]), distance(random_seq_ha[1][:HA_TRUNC], domseq[:HA_TRUNC]))\n",
     "                total_who_error_ha += distance(who_ha_seq, domseq[:HA_TRUNC])\n",
     "            random_errors_ha.append(total_random_error_ha/10)\n",
     "            who_errors_ha.append(total_who_error_ha/10)\n",
@@ -811,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "id": "9f8e1186-1a88-4a52-af68-fb340b8cccea",
    "metadata": {
     "tags": []
@@ -822,21 +822,21 @@
      "output_type": "stream",
      "text": [
       "north_h1n1\n",
-      "    Avg. Improvement 2.56\n",
-      "    Var. Improvement 11.42\n",
-      "    % Improvement: 61.69\n",
+      "    Avg. Improvement 2.29\n",
+      "    Var. Improvement 10.69\n",
+      "    % Improvement: 55.28\n",
       "north_h3n2\n",
-      "    Avg. Improvement 0.19\n",
-      "    Var. Improvement 3.2\n",
-      "    % Improvement: 3.0\n",
+      "    Avg. Improvement 0.08\n",
+      "    Var. Improvement 3.96\n",
+      "    % Improvement: 1.22\n",
       "south_h1n1\n",
-      "    Avg. Improvement 0.78\n",
-      "    Var. Improvement 3.2\n",
-      "    % Improvement: 7.67\n",
+      "    Avg. Improvement 1.5\n",
+      "    Var. Improvement 5.84\n",
+      "    % Improvement: 14.84\n",
       "south_h3n2\n",
-      "    Avg. Improvement 1.05\n",
-      "    Var. Improvement 3.59\n",
-      "    % Improvement: 22.42\n"
+      "    Avg. Improvement 0.7\n",
+      "    Var. Improvement 4.13\n",
+      "    % Improvement: 14.89\n"
      ]
     }
    ],
