--- a/tex/grant/allbib.bib
+++ b/tex/grant/allbib.bib
@@ -1,3 +1,215 @@
+
+
+@article{matrosovich1997avian,
+  title={Avian influenza A viruses differ from human viruses by recognition of sialyloligosaccharides and gangliosides and by a higher conservation of the HA receptor-binding site},
+  author={Matrosovich, MN and Gambaryan, AS and Teneberg, S and Piskarev, VE and Yamnikova, SS and Lvov, DK and Robertson, JS and Karlsson, K-A},
+  journal={Virology},
+  volume={233},
+  number={1},
+  pages={224--234},
+  year={1997},
+  publisher={Elsevier}
+}
+@article{shinya2006influenza,
+  title={Influenza virus receptors in the human airway},
+  author={Shinya, Kyoko and Ebina, Masahito and Yamada, Shinya and Ono, Masao and Kasai, Noriyuki and Kawaoka, Yoshihiro},
+  journal={Nature},
+  volume={440},
+  number={7083},
+  pages={435--436},
+  year={2006},
+  publisher={Nature Publishing Group UK London}
+}
+
+@article{chan2010tropism,
+  title={Tropism and innate host responses of the 2009 pandemic H1N1 influenza virus in ex vivo and in vitro cultures of human conjunctiva and respiratory tract},
+  author={Chan, Michael CW and Chan, Renee WY and Wendy, CL and Ho, Carol CC and Yuen, Kit M and Fong, Joanne HM and Tang, Lynsia LS and Lai, Wico W and Lo, Amy CY and Chui, WH and others},
+  journal={The American journal of pathology},
+  volume={176},
+  number={4},
+  pages={1828--1840},
+  year={2010},
+  publisher={Elsevier}
+}
+
+
+
+
+@article{neumann1999generation,
+  title={Generation of influenza A viruses entirely from cloned cDNAs},
+  author={Neumann, G and Watanabe, T and Ito, H and Watanabe, S and Goto, H and Gao, P and Hughes, M and Perez, DR and Donis, R and Hoffmann, E and others},
+  journal={Proceedings of the National Academy of Sciences},
+  volume={96},
+  number={16},
+  pages={9345--9350},
+  year={1999},
+  doi={10.1073/pnas.96.16.9345}
+}
+
+
+
+
+
+% 35926068 
+@Article{pmid35926068,
+   Author="Zhao, X.  and Lin, X.  and Li, P.  and Chen, Z.  and Zhang, C.  and Manicassamy, B.  and Rong, L.  and Cui, Q.  and Du, R. ",
+   Title="{{E}xpanding the tolerance of segmented {I}nfluenza {A} {V}irus genome using a balance compensation strategy}",
+   Journal="PLoS Pathog",
+   Year="2022",
+   Volume="18",
+   Number="8",
+   Pages="e1010756",
+   Month="Aug"
+}
+
+% 34473799 
+@Article{pmid34473799,
+   Author="Ganti, K.  and Han, J.  and Manicassamy, B.  and Lowen, A. C. ",
+   Title="{{R}ab11a mediates cell-cell spread and reassortment of influenza {A} virus genomes via tunneling nanotubes}",
+   Journal="PLoS Pathog",
+   Year="2021",
+   Volume="17",
+   Number="9",
+   Pages="e1009321",
+   Month="Sep"
+}
+
+% 33970958 
+@Article{pmid33970958,
+   Author="Han, J.  and Ganti, K.  and Sali, V. K.  and Twigg, C.  and Zhang, Y.  and Manivasagam, S.  and Liang, C. Y.  and Vogel, O. A.  and Huang, I.  and Emmanuel, S. N.  and Plung, J.  and Radoshevich, L.  and Perez, J. T.  and Lowen, A. C.  and Manicassamy, B. ",
+   Title="{{H}ost factor {R}ab11a is critical for efficient assembly of influenza {A} virus genomic segments}",
+   Journal="PLoS Pathog",
+   Year="2021",
+   Volume="17",
+   Number="5",
+   Pages="e1009517",
+   Month="May"
+}
+
+% 32075925 
+@Article{pmid32075925,
+   Author="Kandasamy, M.  and Furlong, K.  and Perez, J. T.  and Manicassamy, S.  and Manicassamy, B. ",
+   Title="{{S}uppression of {C}ytotoxic {T} {C}ell {F}unctions and {D}ecreased {L}evels of {T}issue-{R}esident {M}emory {T} {C}ells during {H}5{N}1 {I}nfection}",
+   Journal="J Virol",
+   Year="2020",
+   Volume="94",
+   Number="9",
+   Month="Apr"
+}
+
+% 29899269 
+@Article{pmid29899269,
+   Author="Li, P.  and Cui, Q.  and Wang, L.  and Zhao, X.  and Zhang, Y.  and Manicassamy, B.  and Yang, Y.  and Rong, L.  and Du, R. ",
+   Title="{{L}uciferase}",
+   Journal="Viruses",
+   Year="2018",
+   Volume="10",
+   Number="6",
+   Month="Jun"
+}
+
+% 28282445 
+@Article{pmid28282445,
+   Author="Tundup, S.  and Kandasamy, M.  and Perez, J. T.  and Mena, N.  and Steel, J.  and Nagy, T.  and Albrecht, R. A.  and Manicassamy, B. ",
+   Title="{{E}ndothelial cell tropism is a determinant of {H}5{N}1 pathogenesis in mammalian species}",
+   Journal="PLoS Pathog",
+   Year="2017",
+   Volume="13",
+   Number="3",
+   Pages="e1006270",
+   Month="Mar"
+}
+
+% 23686828 
+@Article{pmid23686828,
+   Author="Perez, J. T.  and a-Sastre, A.  and Manicassamy, B. ",
+   Title="{{I}nsertion of a {G}{F}{P} reporter gene in influenza virus}",
+   Journal="Curr Protoc Microbiol",
+   Year="2013",
+   Volume="Chapter 15",
+   Pages="1--15"
+}
+
+% 20534532 
+@Article{pmid20534532,
+   Author="Manicassamy, B.  and Manicassamy, S.  and Belicha-Villanueva, A.  and Pisanelli, G.  and Pulendran, B.  and a-Sastre, A. ",
+   Title="{{A}nalysis of in vivo dynamics of influenza virus infection in mice using a {G}{F}{P} reporter virus}",
+   Journal="Proc Natl Acad Sci U S A",
+   Year="2010",
+   Volume="107",
+   Number="25",
+   Pages="11531--11536",
+   Month="Jun"
+}
+
+% 20126449 
+@Article{pmid20126449,
+   Author="Manicassamy, B.  and Medina, R. A.  and Hai, R.  and Tsibane, T.  and Stertz, S.  and n, E.  and Palese, P.  and Basler, C. F.  and a-Sastre, A. ",
+   Title="{{P}rotection of mice against lethal challenge with 2009 {H}1{N}1 influenza {A} virus by 1918-like and classical swine {H}1{N}1 based vaccines}",
+   Journal="PLoS Pathog",
+   Year="2010",
+   Volume="6",
+   Number="1",
+   Pages="e1000745",
+   Month="Jan"
+}
+
+
+
+% 23720581 
+@Article{pmid23720581,
+   Author="Medina, R. A.  and Stertz, S.  and Manicassamy, B.  and Zimmermann, P.  and Sun, X.  and Albrecht, R. A.  and Uusi-Kerttula, H.  and Zagordi, O.  and Belshe, R. B.  and Frey, S. E.  and Tumpey, T. M.  and a-Sastre, A. ",
+   Title="{{G}lycosylations in the globular head of the hemagglutinin protein modulate the virulence and antigenic properties of the {H}1{N}1 influenza viruses}",
+   Journal="Sci Transl Med",
+   Year="2013",
+   Volume="5",
+   Number="187",
+   Pages="187ra70",
+   Month="May"
+}
+
+
+
+
+
+
+@article{ganti2021rab11a,
+  title={Rab11a mediates cell-cell spread and reassortment of influenza A virus genomes via tunneling nanotubes},
+  author={Ganti, Ketaki and Han, Julianna and Manicassamy, Balaji and Lowen, Anice C},
+  journal={PLoS Pathogens},
+  volume={17},
+  number={9},
+  pages={e1009321},
+  year={2021},
+  publisher={Public Library of Science San Francisco, CA USA}
+}
+
+@article{wittwer2003high,
+  title={High-resolution genotyping by amplicon melting analysis using LCGreen},
+  author={Wittwer, Carl T and Reed, Gudrun H and Gundry, Cameron N and Vandersteen, Joshua G and Pryor, Robert J},
+  journal={Clinical chemistry},
+  volume={49},
+  number={6},
+  pages={853--860},
+  year={2003},
+  publisher={Oxford University Press}
+}
+@article{marshall2013influenza,
+  title={Influenza virus reassortment occurs with high frequency in the absence of segment mismatch},
+  author={Marshall, Nicolle and Priyamvada, Lalita and Ende, Zachary and Steel, John and Lowen, Anice C},
+  journal={PLoS pathogens},
+  volume={9},
+  number={6},
+  pages={e1003421},
+  year={2013},
+  publisher={Public Library of Science San Francisco, USA}
+}
+
+
+
+
+
+
 @article{nelson2018origins,
   title={Origins of the 1918 pandemic: revisiting the swine “mixing vessel” hypothesis},
   author={Nelson, Martha I and Worobey, Michael},
