--- a/tex/grant/preamble.tex
+++ b/tex/grant/preamble.tex
@@ -484,7 +484,7 @@ outer color=transparent!100]
   {0ex \@plus.0ex}%
   {\fontsize{11}{11}\selectfont\bfseries\sffamily\color{black}}}
 \renewcommand\subsubsection{\@startsection {section}{1}{\z@}%
-  {-1.5ex \@plus -.5ex \@minus -.2ex}%
+  {-.1ex \@plus -.5ex \@minus -.2ex}%
   {0.0ex \@plus.5ex}%
   {\bfseries\sffamily\color{Red4}}}
 \renewcommand\paragraph{\@startsection {section}{1}{\z@}%
